Fixed CSS nav menu from wrapping travel expo
git-svn-id: http://cubeless.dev.sabre.com:18080/svn/cubeless/communities/agentstream@20255 e05bbbe3-11a3-40ec-a18c-f20a9e1084ec

--- a/public/themes/agentstream/_css/style.css
+++ b/public/themes/agentstream/_css/style.css
@@ -5300,7 +5300,7 @@ div#deals-header h2, div#deals-header p {
 
 /* line 19, ../../../../app/stylesheets/themes/agentstream/layout.scss */
 .global_nav {
-  width: 460px;
+  width: 470px;
 }
 
 /* line 20, ../../../../app/stylesheets/themes/agentstream/layout.scss */
